# Arda-human

./: Cargo.toml  INDEX.md  README.md
docs/: human-knowledge-ingestion-contract.md  migration-notes.md
fixtures/vault-basic/: Known.md  Main.md
src/: INDEX.md  README.md  lib.rs
tests/: INDEX.md  README.md  target_local.rs
